tests/NormalTests/paczka1/fuzzy1/42038506.err
Error in line 4: A503 S224 21,5
Error in line 32: Lnre8 A204 197,8
